* Fixed multi level hover issue in menus on mobile devices. * Fixed logo image HTML by adding spaces between attributes.

--- a/themes/vantage/trunk/style.less
+++ b/themes/vantage/trunk/style.less
@@ -800,7 +800,7 @@ body.mobile-device {
 			}
 		}
 
-		li:hover ul {
+		li:hover > ul {
 			display: block;
 		}
 	}
